Habilita foco automatico ao input

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <main class="calculadora">
-        <input type="number">
+        <input type="number" autofocus="autofocus">
         <div>
             <button>%</button>
             <button>CE</button>
