--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button>/</button>
         </div>
         <div>
-            <button>7/x</button>
+            <button>7</button>
             <button>8</button>
             <button>9</button>
             <button>*</button>
